--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak],
+.ng-cloak, .x-ng-cloak,
+.ng-hide {
+  display: none !important;
+}
+
+ng\:form {
+  display: block;
+}
 /*
  * index.css
  * Copyright (C) 2013 ender xu
